test/Transforms/Flattening/instantiate_column_field_fail.llzk
// RUN: llzk-opt -split-input-file %s -llzk-flatten -verify-diagnostics

module attributes {llzk.lang} {
  poly.template @TComponentA1 {
    poly.param @T

    struct.def @ComponentA1 {
      // expected-error@+1 {{'struct.member' op marked as column can only contain felts, arrays of column types, or structs with columns, but has type 'index'}}
      struct.member @f1 : !poly.tvar<@T> {column, llzk.pub}

      function.def @constrain(%self: !struct.type<@TComponentA1::@ComponentA1<[@T]>>) { function.return }
      function.def @compute() -> !struct.type<@TComponentA1::@ComponentA1<[@T]>> {
        %self = struct.new : !struct.type<@TComponentA1::@ComponentA1<[@T]>>
        function.return %self : !struct.type<@TComponentA1::@ComponentA1<[@T]>>
      }
    }
  }

  struct.def @ComponentA2 {
    function.def @compute(%p: !struct.type<@TComponentA1::@ComponentA1<[index]>>) -> !struct.type<@ComponentA2> {
      %self = struct.new : !struct.type<@ComponentA2>
      %r = struct.readm %p[@f1] : !struct.type<@TComponentA1::@ComponentA1<[index]>>, index {tableOffset = -1 : index}
      function.return %self : !struct.type<@ComponentA2>
    }

    function.def @constrain(%self: !struct.type<@ComponentA2>, %p: !struct.type<@TComponentA1::@ComponentA1<[index]>>) {
      function.return
    }
  }
}
